# data-analysis

./: metals_analysis.ipynb  pyproject.toml  readme.md
.ipynb_checkpoints/: pyproject-checkpoint.toml
